# aggra

./: pyproject.toml  requirements.txt
.run/: Template Python.run.xml
aggra/: __init__.py  docker-compose.yml
aggra/alembic/: env.py
aggra/app/: base.py  deps.py
aggra/app/api/: api.py
aggra/app/api/endpoints/: job.py
aggra/app/api/schemas/: job.py
aggra/core/: security.py  settings.py
aggra/models/: job_record.py  mixin.py  user.py
exmaple/: api_server.sh  app.py
